// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--json output schema snapshots > NOT_IMPLEMENTED shape is snapshot-stable 1`] = `
{
  "command": "install",
  "message": ""install" has no backend wired yet — see the roadmap for the phase that lands it",
  "status": "NOT_IMPLEMENTED",
}
`;

exports[`--json output schema snapshots > gateway mcp's tool-listing shape (empty registry) is snapshot-stable 1`] = `
{
  "tools": [],
}
`;

exports[`--json output schema snapshots > gateway mcp's tool-listing shape (one registered tool) is snapshot-stable 1`] = `
{
  "tools": [
    {
      "description": "Search the tracker.",
      "inputSchema": {
        "properties": {
          "query": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "name": "tracker.search",
    },
  ],
}
`;

exports[`--json output schema snapshots — approve <digest> > approve --json — confirmed at the terminal, dispatched 1`] = `
"{
  "approved": true,
  "changeSetId": "<uuid>",
  "state": "ready",
  "dispatch": {
    "accepted": true,
    "runId": "<uuid>"
  }
}
"
`;

exports[`--json output schema snapshots — approve <digest> > approve --json — declined at the terminal (a closed, fully static payload) 1`] = `
"{
  "approved": false,
  "declined": true
}
"
`;

exports[`--json output schema snapshots — connection add / list / doctor / capabilities > connection add --json 1`] = `
"{
  "id": "<uuid>",
  "provider": "jira",
  "baseUrl": "https://example.atlassian.net",
  "secretRef": "env:JIRA_TOKEN",
  "discoveryTtlSeconds": 900
}
"
`;

exports[`--json output schema snapshots — connection add / list / doctor / capabilities > connection capabilities --json (injected discoverer) 1`] = `
"{
  "connectionId": "<uuid>",
  "provider": "grafana",
  "discovered": true,
  "product": "grafana",
  "edition": "oss",
  "version": "13.1.0",
  "apiFamilies": [
    "dashboard:legacy"
  ],
  "resources": [
    "dashboard"
  ],
  "actions": [
    "list"
  ],
  "permissions": [
    "read"
  ],
  "isReadOnly": true,
  "discoveredAt": "<timestamp>",
  "expiresAt": "<timestamp>"
}
"
`;

exports[`--json output schema snapshots — connection add / list / doctor / capabilities > connection doctor --json (reachable) 1`] = `
"{
  "connectionId": "<uuid>",
  "provider": "jira",
  "baseUrl": "https://example.atlassian.net",
  "reachable": true,
  "detail": "HTTP 200"
}
"
`;

exports[`--json output schema snapshots — connection add / list / doctor / capabilities > connection list --json (one connection) 1`] = `
"{
  "connections": [
    {
      "id": "<uuid>",
      "provider": "jira",
      "baseUrl": "https://example.atlassian.net",
      "secretRef": "env:JIRA_TOKEN",
      "discoveryTtlSeconds": 900
    }
  ]
}
"
`;

exports[`--json output schema snapshots — doctor (shape-reduced: host-independent) > doctor --json finding shape and id set are snapshot-stable 1`] = `
{
  "allPassedType": "boolean",
  "findingIds": [
    "engine.version",
    "sandbox.selftest",
    "hermeticity.selftest",
    "auth.probe",
    "git.plumbing",
    "xdg.permissions",
    "journal.chain",
    "journal.head-anchor",
    "journal.writer-separation",
    "wsl2.warnings",
  ],
  "findingKeySets": [
    "evidence,id,passed,repairStep,severity",
    "evidence,id,passed,severity",
  ],
  "topLevelKeys": [
    "allPassed",
    "findings",
  ],
}
`;

exports[`--json output schema snapshots — doctor (shape-reduced: host-independent) > doctor --repair-plan --json adds exactly the repairPlan member 1`] = `
[
  "allPassed",
  "findings",
  "repairPlan",
]
`;

exports[`--json output schema snapshots — evidence, populated > evidence --json over two journaled evidence_pointer records 1`] = `
"{
  "changeSetId": "<uuid>",
  "records": [
    {
      "schemaVersion": 1,
      "id": "<uuid>",
      "changeSetId": "<uuid>",
      "command": "npm test",
      "exitStatus": 0,
      "toolchainFingerprint": "node@24.18.0",
      "capturedAt": "<timestamp>",
      "artifactDigests": [
        "sha256:deterministic-fixture-artifact-digest"
      ],
      "objectId": "0000000000000000000000000000000000000a"
    },
    {
      "schemaVersion": 1,
      "id": "<uuid>",
      "changeSetId": "<uuid>",
      "command": "npm run lint",
      "exitStatus": 1,
      "toolchainFingerprint": "node@24.18.0",
      "capturedAt": "<timestamp>",
      "artifactDigests": [
        "sha256:deterministic-fixture-artifact-digest"
      ],
      "objectId": "0000000000000000000000000000000000000a"
    }
  ]
}
"
`;

exports[`--json output schema snapshots — install / upgrade / uninstall > install --json 1`] = `
"{
  "status": "installed",
  "repoState": "not-a-repo",
  "monorepoDetected": false,
  "gitInitPerformed": true,
  "diff": [
    {
      "relPath": "CLAUDE.md",
      "action": "create"
    },
    {
      "relPath": ".claude/settings.json",
      "action": "create"
    },
    {
      "relPath": ".mcp.json",
      "action": "create"
    },
    {
      "relPath": ".claude/agents/eo-explore.md",
      "action": "create"
    },
    {
      "relPath": ".claude/agents/eo-reviewer.md",
      "action": "create"
    },
    {
      "relPath": ".claude/agents/eo-roaster.md",
      "action": "create"
    },
    {
      "relPath": ".claude/agents/eo-architect.md",
      "action": "create"
    },
    {
      "relPath": ".claude/agents/eo-planner.md",
      "action": "create"
    },
    {
      "relPath": ".claude/crabgic-statusline.mjs",
      "action": "create"
    }
  ],
  "policy": {
    "status": "not-configured"
  }
}
"
`;

exports[`--json output schema snapshots — install / upgrade / uninstall > uninstall --json 1`] = `
"{
  "status": "uninstalled",
  "outcomes": [
    {
      "relPath": "CLAUDE.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/settings.json",
      "action": "removed"
    },
    {
      "relPath": ".mcp.json",
      "action": "removed"
    },
    {
      "relPath": ".claude/agents/eo-explore.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/agents/eo-reviewer.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/agents/eo-roaster.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/agents/eo-architect.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/agents/eo-planner.md",
      "action": "removed"
    },
    {
      "relPath": ".claude/crabgic-statusline.mjs",
      "action": "removed"
    }
  ]
}
"
`;

exports[`--json output schema snapshots — install / upgrade / uninstall > upgrade --json (immediately after a fresh install: up-to-date) 1`] = `
"{
  "status": "up-to-date",
  "diff": [
    {
      "relPath": "CLAUDE.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/settings.json",
      "action": "unchanged"
    },
    {
      "relPath": ".mcp.json",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/agents/eo-explore.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/agents/eo-reviewer.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/agents/eo-roaster.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/agents/eo-architect.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/agents/eo-planner.md",
      "action": "unchanged"
    },
    {
      "relPath": ".claude/crabgic-statusline.mjs",
      "action": "unchanged"
    }
  ],
  "recoveredFromInterruptedUpgrade": false
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn approve (human mode, 1 of 2) — golden CLI output 1`] = `
"recorded independent-review approval 1/2 for proposal "<uuid>" — awaiting at least one more DISTINCT reviewer approval before promotion
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn approve --json (1 of 2 — records an approval, does not promote) 1`] = `
"{
  "promoted": false,
  "distinctApprovals": 1
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn approve --json (2 of 2 — promoted, with the constructed ChangeSet) 1`] = `
"{
  "promoted": true,
  "changeSet": {
    "schemaVersion": 1,
    "id": "<uuid>",
    "state": "draft",
    "intentContractId": "<uuid>",
    "authorizationEnvelopeId": "<uuid>",
    "capabilityManifestId": "<uuid>",
    "provisionalPerformanceContractId": "<uuid>",
    "integrationOrder": [],
    "rollbackStrategy": "Promoted learning proposal <uuid>: revert the integration commit and restore prior behavior.",
    "createdAt": "<timestamp>"
  }
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn list (human mode, empty registry) — golden CLI output 1`] = `
"no learning proposals recorded yet
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn list (human mode, one proposal) — golden CLI output 1`] = `
"- <uuid> [observation] always re-check X
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn list --json (empty registry) 1`] = `
"{
  "proposals": []
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn list --json (one proposal) 1`] = `
"{
  "proposals": [
    {
      "schemaVersion": 1,
      "id": "<uuid>",
      "state": "observation",
      "content": "always re-check X",
      "evidenceRecordIds": [],
      "createdAt": "<timestamp>"
    }
  ]
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn reject --json 1`] = `
"{
  "rejected": true,
  "proposal": {
    "schemaVersion": 1,
    "id": "<uuid>",
    "state": "rejected",
    "content": "lesson",
    "evidenceRecordIds": [],
    "createdAt": "<timestamp>"
  }
}
"
`;

exports[`--json output schema snapshots — learn list|approve|reject|rollback (roadmap/22's golden CLI-output test) > learn rollback --json (of a genuinely promoted proposal) 1`] = `
"{
  "rolledBack": true,
  "inverseChangeSet": {
    "schemaVersion": 1,
    "id": "<uuid>",
    "state": "draft",
    "intentContractId": "<uuid>",
    "authorizationEnvelopeId": "<uuid>",
    "capabilityManifestId": "<uuid>",
    "provisionalPerformanceContractId": "<uuid>",
    "integrationOrder": [],
    "rollbackStrategy": "Inverse of ChangeSet <uuid> (promoted learning proposal <uuid>): restore the pre-promotion baseline.",
    "createdAt": "<timestamp>"
  }
}
"
`;

exports[`--json output schema snapshots — run (three of the five decided-outcome arms) > run --json — approved under the standing policy, and dispatched 1`] = `
"{
  "outcome": {
    "status": "created",
    "artifacts": {
      "changeSet": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "state": "awaiting_approval",
        "intentContractId": "<uuid>",
        "authorizationEnvelopeId": "<uuid>",
        "capabilityManifestId": "<uuid>",
        "provisionalPerformanceContractId": "<uuid>",
        "integrationOrder": [],
        "rollbackStrategy": "Revert the integration commit.",
        "createdAt": "<timestamp>"
      },
      "intentContract": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "sections": {
          "scope": "s",
          "non-goals": "n",
          "audience": "a",
          "compatibility": "c",
          "security": "sec",
          "performance": "p",
          "observability": "o",
          "rollout": "r",
          "acceptance": "acc"
        },
        "requirementIds": []
      },
      "requirements": [],
      "workUnits": [],
      "envelope": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "canonicalHash": "sha256:cd4717eb5d41bb81ab4b1f2ac732cb6af283861deaf72f9b1bf9accefeffc803",
        "ownedPaths": [],
        "commands": [],
        "networkDestinations": [],
        "credentialReferences": [],
        "dependencies": [],
        "remoteResourceAuthorizations": [],
        "temporaryServices": [],
        "prohibitedActions": [],
        "maxTurnsPerAttempt": 40,
        "provisionalBudgetHash": "sha256:4f53cda18c2baa0c0354bb5f9a3ecbe5ed12ab4d8e11ba873c2f11161202b945"
      },
      "capabilityManifest": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "entries": []
      },
      "provisionalPerformanceContract": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "budgetSource": "base_revision_measurement",
        "variant": "provisional",
        "budgets": [],
        "budgetHash": "sha256:4f53cda18c2baa0c0354bb5f9a3ecbe5ed12ab4d8e11ba873c2f11161202b945"
      }
    }
  },
  "standing": {
    "status": "approved",
    "changeSet": {
      "schemaVersion": 1,
      "id": "<uuid>",
      "state": "ready",
      "intentContractId": "<uuid>",
      "authorizationEnvelopeId": "<uuid>",
      "capabilityManifestId": "<uuid>",
      "provisionalPerformanceContractId": "<uuid>",
      "integrationOrder": [],
      "rollbackStrategy": "Revert the integration commit.",
      "createdAt": "<timestamp>"
    },
    "policyDigest": "sha256:standing"
  },
  "dispatch": {
    "accepted": true,
    "runId": "<uuid>"
  }
}
"
`;

exports[`--json output schema snapshots — run (three of the five decided-outcome arms) > run --json — conflict (same requestKey, different content, same journal) 1`] = `
"{
  "outcome": {
    "status": "conflict",
    "existingContentHash": "sha256:8ec3aa7683a9ffa94050119c5f8399e607724113f2f31967c00ee40357881780"
  }
}
"
`;

exports[`--json output schema snapshots — run (three of the five decided-outcome arms) > run --json — escalate (the envelope claims authority the policy does not grant) 1`] = `
"{
  "outcome": {
    "status": "created",
    "artifacts": {
      "changeSet": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "state": "awaiting_approval",
        "intentContractId": "<uuid>",
        "authorizationEnvelopeId": "<uuid>",
        "capabilityManifestId": "<uuid>",
        "provisionalPerformanceContractId": "<uuid>",
        "integrationOrder": [],
        "rollbackStrategy": "Revert the integration commit.",
        "createdAt": "<timestamp>"
      },
      "intentContract": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "sections": {
          "scope": "s",
          "non-goals": "n",
          "audience": "a",
          "compatibility": "c",
          "security": "sec",
          "performance": "p",
          "observability": "o",
          "rollout": "r",
          "acceptance": "acc"
        },
        "requirementIds": []
      },
      "requirements": [],
      "workUnits": [],
      "envelope": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "canonicalHash": "sha256:81c1b864f19ade6c6120d11a2eba63c92855a0cf6213328e6399749d8e4e7faa",
        "ownedPaths": [
          "infra/secrets"
        ],
        "commands": [],
        "networkDestinations": [],
        "credentialReferences": [],
        "dependencies": [],
        "remoteResourceAuthorizations": [],
        "temporaryServices": [],
        "prohibitedActions": [],
        "maxTurnsPerAttempt": 40,
        "provisionalBudgetHash": "sha256:4f53cda18c2baa0c0354bb5f9a3ecbe5ed12ab4d8e11ba873c2f11161202b945"
      },
      "capabilityManifest": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "entries": []
      },
      "provisionalPerformanceContract": {
        "schemaVersion": 1,
        "id": "<uuid>",
        "changeSetId": "<uuid>",
        "createdAt": "<timestamp>",
        "budgetSource": "base_revision_measurement",
        "variant": "provisional",
        "budgets": [],
        "budgetHash": "sha256:4f53cda18c2baa0c0354bb5f9a3ecbe5ed12ab4d8e11ba873c2f11161202b945"
      }
    }
  },
  "standing": {
    "status": "escalate",
    "reason": "this change set needs authority the standing policy does not grant: owned path \\"infra/secrets\\" is not at or below any allowed path prefix"
  }
}
"
`;

exports[`--json output schema snapshots — supervisor-backed commands (status/cancel/resume/evidence) > cancel <target-id> --json (unknown run) 1`] = `
"{
  "accepted": false
}
"
`;

exports[`--json output schema snapshots — supervisor-backed commands (status/cancel/resume/evidence) > evidence <change-set-id> --json (empty report) 1`] = `
"{
  "changeSetId": "<uuid>",
  "records": []
}
"
`;

exports[`--json output schema snapshots — supervisor-backed commands (status/cancel/resume/evidence) > resume <run-id> --json — the daemon's own refusal prose, pinned verbatim 1`] = `
"{
  "accepted": false,
  "reason": "no run dispatcher is configured on this daemon"
}
"
`;

exports[`--json output schema snapshots — supervisor-backed commands (status/cancel/resume/evidence) > status (no run-id) --json on a fresh daemon 1`] = `
"{
  "runs": []
}
"
`;

exports[`--json output schema snapshots — supervisor-backed commands (status/cancel/resume/evidence) > status <run-id> --json (unknown run) 1`] = `
"{}
"
`;

exports[`--json output schema snapshots — trust review / approve / revoke > trust approve --json (minted, digest-bound token) 1`] = `
"{
  "tokenId": "<uuid>",
  "token": "<token>",
  "subjectKind": "capability_digest",
  "digest": "<sha256>",
  "mintedAt": "<timestamp>",
  "expiresAt": "<timestamp>"
}
"
`;

exports[`--json output schema snapshots — trust review / approve / revoke > trust review --json (empty store) 1`] = `
"{
  "entries": []
}
"
`;

exports[`--json output schema snapshots — trust review / approve / revoke > trust revoke --json (unknown token id — the refusal shape) 1`] = `
"{
  "revoked": false,
  "reason": "no approval record found for token \\"no-such-token\\" — nothing to revoke"
}
"
`;

exports[`help text snapshots > top-level help (--json) is snapshot-stable 1`] = `
"{
  "install": {
    "usage": "crabgic install [--dry-run] [--json]",
    "summary": "Install the plugin/managed config into this project."
  },
  "doctor": {
    "usage": "crabgic doctor [--repair-plan] [--json]",
    "summary": "Validate the host end-to-end against seeded fault checks."
  },
  "run": {
    "usage": "crabgic run [--json]",
    "summary": "Dispatch a new run."
  },
  "status": {
    "usage": "crabgic status [run-id] [--watch] [--json]",
    "summary": "Show (or stream) a run's status."
  },
  "resume": {
    "usage": "crabgic resume <run-id>",
    "summary": "Resume a parked or interrupted run."
  },
  "cancel": {
    "usage": "crabgic cancel <run-id|task-id>",
    "summary": "Cancel a run or a single task within it."
  },
  "evidence": {
    "usage": "crabgic evidence <change-set-id>",
    "summary": "Show every EvidenceRecord journaled for a ChangeSet."
  },
  "approve": {
    "usage": "crabgic approve <envelope-digest> [--json]",
    "summary": "Approve a pending authorization envelope at an interactive terminal (human-only; the escalation path for out-of-policy work)."
  },
  "connection": {
    "usage": "crabgic connection add jira|grafana --base-url <https-url> --reference <secret-ref> [--deployment <type>] [--allow-redirect <csv>] [--allow-resource <csv>] [--allow-action <csv>] [--discovery-ttl <seconds>] / list / doctor <id> / capabilities <id>",
    "summary": "Manage external connector connections."
  },
  "trust": {
    "usage": "crabgic trust review|approve|revoke",
    "summary": "Review and approve high-impact capability grants."
  },
  "learn": {
    "usage": "crabgic learn list|approve|reject|rollback",
    "summary": "Manage reviewed learning proposals."
  },
  "upgrade": {
    "usage": "crabgic upgrade [--dry-run]",
    "summary": "Upgrade the installed plugin/managed config."
  },
  "uninstall": {
    "usage": "crabgic uninstall [--keep-state]",
    "summary": "Remove the installed plugin/managed config."
  },
  "gateway": {
    "usage": "crabgic gateway mcp",
    "summary": "Boot the gateway MCP server over stdio (no user-facing flags)."
  }
}
"
`;

exports[`help text snapshots > top-level help (human) is snapshot-stable 1`] = `
"Commands:

  crabgic install [--dry-run] [--json]
      Install the plugin/managed config into this project.
  crabgic doctor [--repair-plan] [--json]
      Validate the host end-to-end against seeded fault checks.
  crabgic run [--json]
      Dispatch a new run.
  crabgic status [run-id] [--watch] [--json]
      Show (or stream) a run's status.
  crabgic resume <run-id>
      Resume a parked or interrupted run.
  crabgic cancel <run-id|task-id>
      Cancel a run or a single task within it.
  crabgic evidence <change-set-id>
      Show every EvidenceRecord journaled for a ChangeSet.
  crabgic approve <envelope-digest> [--json]
      Approve a pending authorization envelope at an interactive terminal (human-only; the escalation path for out-of-policy work).
  crabgic connection add jira|grafana --base-url <https-url> --reference <secret-ref> [--deployment <type>] [--allow-redirect <csv>] [--allow-resource <csv>] [--allow-action <csv>] [--discovery-ttl <seconds>] / list / doctor <id> / capabilities <id>
      Manage external connector connections.
  crabgic trust review|approve|revoke
      Review and approve high-impact capability grants.
  crabgic learn list|approve|reject|rollback
      Manage reviewed learning proposals.
  crabgic upgrade [--dry-run]
      Upgrade the installed plugin/managed config.
  crabgic uninstall [--keep-state]
      Remove the installed plugin/managed config.
  crabgic gateway mcp
      Boot the gateway MCP server over stdio (no user-facing flags).
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-approve 1`] = `
"crabgic approve <envelope-digest> [--json]
    Approve a pending authorization envelope at an interactive terminal (human-only; the escalation path for out-of-policy work).
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-cancel 1`] = `
"crabgic cancel <run-id|task-id>
    Cancel a run or a single task within it.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-connection 1`] = `
"crabgic connection add jira|grafana --base-url <https-url> --reference <secret-ref> [--deployment <type>] [--allow-redirect <csv>] [--allow-resource <csv>] [--allow-action <csv>] [--discovery-ttl <seconds>] / list / doctor <id> / capabilities <id>
    Manage external connector connections.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-doctor 1`] = `
"crabgic doctor [--repair-plan] [--json]
    Validate the host end-to-end against seeded fault checks.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-evidence 1`] = `
"crabgic evidence <change-set-id>
    Show every EvidenceRecord journaled for a ChangeSet.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-gateway 1`] = `
"crabgic gateway mcp
    Boot the gateway MCP server over stdio (no user-facing flags).
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-install 1`] = `
"crabgic install [--dry-run] [--json]
    Install the plugin/managed config into this project.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-learn 1`] = `
"crabgic learn list|approve|reject|rollback
    Manage reviewed learning proposals.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-resume 1`] = `
"crabgic resume <run-id>
    Resume a parked or interrupted run.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-run 1`] = `
"crabgic run [--json]
    Dispatch a new run.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-status 1`] = `
"crabgic status [run-id] [--watch] [--json]
    Show (or stream) a run's status.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-trust 1`] = `
"crabgic trust review|approve|revoke
    Review and approve high-impact capability grants.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-uninstall 1`] = `
"crabgic uninstall [--keep-state]
    Remove the installed plugin/managed config.
"
`;

exports[`help text snapshots > topic help for every declared command is snapshot-stable > topic-upgrade 1`] = `
"crabgic upgrade [--dry-run]
    Upgrade the installed plugin/managed config.
"
`;
